--- a/ИНФ-уч-др/School_Exercises/Pharmacy_FormsApp/Pharmacy_FormsApp.csproj
+++ b/ИНФ-уч-др/School_Exercises/Pharmacy_FormsApp/Pharmacy_FormsApp.csproj
@@ -46,27 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddMedicine.cs">
+    <Compile Include="AddMedicineForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddMedicine.Designer.cs">
-      <DependentUpon>AddMedicine.cs</DependentUpon>
+    <Compile Include="AddMedicineForm.Designer.cs">
+      <DependentUpon>AddMedicineForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="AddPharmacyForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AddPharmacyForm.Designer.cs">
+      <DependentUpon>AddPharmacyForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Medicine.cs" />
     <Compile Include="Pharmacy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AddMedicine.resx">
-      <DependentUpon>AddMedicine.cs</DependentUpon>
+    <EmbeddedResource Include="AddMedicineForm.resx">
+      <DependentUpon>AddMedicineForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AddPharmacyForm.resx">
+      <DependentUpon>AddPharmacyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -92,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Medicine.txt" />
+    <Content Include="Pharmacy.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
